--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,5 @@ jobs:
         
       - name: Run pytest
         run: |
-          pytest -q
+          echo "Repository contents:" && ls -la
+          echo "Running pytest on tests/" && pytest -q tests
